fixed button visibility after flee

--- a/project-1/style.css
+++ b/project-1/style.css
@@ -1,7 +1,14 @@
+/*body{
+	background-image: url("images/autumnbg.jpg");
+}*/
+
 #main-wrap{
 	margin: 0 auto;
 	width: 50%;
+/*	background-color: #F5A9F2;
+	text-align: center;*/
 }
+
 
 #output{
 	height: 150px;
